EITIMS-106 Css fix that caused blurry images

--- a/public_html/sites/all/themes/eiti/styles/base.css.less
+++ b/public_html/sites/all/themes/eiti/styles/base.css.less
@@ -152,7 +152,7 @@ hr {
     }
     &.image-wrapped {
       img {
-        width: 116px;
+        max-width: 116px;
       }
     }
   }
